# frame

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  frame.toml  frame.toml.example
assets/test/: end.txt  start.txt
src/: animator.cpp  animator.h  config.h  frame.cpp  frame.h  main.cpp  renderer.cpp  renderer.h
